# MiscWhatever

./: .gitignore  CMD.hh  CMakeLists.txt  General.cpp  General.hh  Help.txt  ItAdd.cpp  MiscWhatever.sln  README.md  RandomSongGen.cpp  VocabExtract.cpp  main.cpp  placeholderfunc.cpp  text.cpp
CMD/: CMDHistory.cpp  ItAdd.cpp  MysteryFunction.cpp  RandomSongGen.cpp  ShowTheGitignore.cpp  VocabExtract.cpp
MiscWhatever/: CMD.hh  General.hh  MiscWhatever.vcxproj  MiscWhatever.vcxproj.filters  main.cpp
lib/: CMD.hh  Dog.hh  General.cpp  General.hh
